maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:59: error: value North is not a member of object plm.universe.Direction
  var d = Direction.North
                    ^